Team page alignment style fixes

--- a/styles/main.css
+++ b/styles/main.css
@@ -472,8 +472,10 @@ img{
   background-color: #C5EAF9;
   height: 100vh;
 }
-
+/*/////////////////////////*/
 /* our team */
+/*//////////////////////////*/
+
 .team .members {
     width: 80%;
     margin-left: 5%;
@@ -481,6 +483,10 @@ img{
 
 .content.team {
   padding: 50px 20px 50px 20px;
+}
+
+.team a.button-large {
+    margin: 0 15px 30px 15px;
 }
 
 @media (max-width: 480px) {
@@ -509,7 +515,12 @@ img{
     width: 100%;
   }
 }
-
+@media (max-width: 1300px) {
+  .team .members {
+    width: 90%;
+    margin-left: 10%;
+  }
+}
 .content.team a {
   margin-top: 30px;
 }
